Animation Editors Channels Region get shown empty after filters are used (e.g 'Only Show Selected') #97202

Closed
opened 2022-04-09 20:16:17 +02:00 by Kevin C. Burke · 5 comments
Contributor

Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: never

Short description of error
The Graph Editor's Channels Region is not always being redrawn.
If one is scrolled down a long list of channels, and then filters are used that reduce the number of show channels considerably, the channels list can be scrolled "out of view" looking like it was empty

Exact steps for others to reproduce the error
#97202.blend

  • Open .blend
  • Toggle the 'Only Show Selected' filter

As seen in the attached video, toggling the 'Only Show Selected' button appears to clear the Graph Editor's Channels Region, but the channels aren't redrawn until the panel is edited.

{F12986344}System Information

Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: never **Short description of error** The Graph Editor's Channels Region is not always being redrawn. If one is scrolled down a long list of channels, and then filters are used that reduce the number of show channels considerably, the channels list can be scrolled "out of view" looking like it was empty **Exact steps for others to reproduce the error** [#97202.blend](https://archive.blender.org/developer/F12995967/T97202.blend) - Open .blend - Toggle the 'Only Show Selected' filter As seen in the attached video, toggling the 'Only Show Selected' button appears to clear the Graph Editor's Channels Region, but the channels aren't redrawn until the panel is edited. {[F12986344](https://archive.blender.org/developer/F12986344/2022-04-09_11-04-07.mp4)}**System Information**
Author
Contributor

Added subscriber: @KevinCBurke

Added subscriber: @KevinCBurke
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Think the reason is you are "scrolled out of view" in the channels region.
But yeah, this is unnecessarily confusing, would consider this a bug.
All Animation Editors actually have the propblem

Think the reason is you are "scrolled out of view" in the channels region. But yeah, this is unnecessarily confusing, would consider this a bug. All Animation Editors actually have the propblem
Philipp Oeser changed title from Graph Editor 'Only Show Selected' Channels Region Refresh Error to Animation Editors Channels Region get show empty after filters are used (e.g 'Only Show Selected') 2022-04-11 17:11:31 +02:00
Philipp Oeser changed title from Animation Editors Channels Region get show empty after filters are used (e.g 'Only Show Selected') to Animation Editors Channels Region get shown empty after filters are used (e.g 'Only Show Selected') 2022-04-11 17:12:00 +02:00
Member

Assumption is that View2D cur rect is not properly reset.
The region redraw does take place.

Assumption is that `View2D` `cur` rect is not properly reset. The region redraw **does** take place.
Philipp Oeser removed the
Interest
Animation & Rigging
label 2023-02-09 14:35:09 +01:00
Christoph Lendenfeld self-assigned this 2024-02-08 17:51:32 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-29 10:33:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97202
No description provided.